# meteo-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logs_config.json  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_05_07_0030-1fbabf2a972c_initial_commit.py  2024_05_07_0211-16670270ff97_renamed_longitude.py  2024_05_07_0300-12c596a06a46_deleted_day.py  2024_05_07_1752-0c1b31e4a006_chenged_to_open_meteo_data.py  2024_05_07_1826-757dfb6fa652_added_tz.py  2024_05_07_1849-79d97d5f6dc4_removed_tz.py
src/: api.py  config.py  etl_handler.py  main.py  service.py
src/database/: config.py  helper.py
src/models/: base.py  fields.py  meteo_data.py
src/repositories/: base.py  exceptions.py  fields.py  meteo_data.py  sqlalchemy_repository.py
src/repositories/uow/: base.py  sqlalchemy_uow.py
src/schemas/: fields.py  meteo_data.py
src/scrapers/: base.py  config.py  constants.py  fields.py  open_meteo.py  open_weather.py
