[tool.poetry]
name = "meteo-service"
version = "0.1.0"
description = ""
authors = ["Jurabek Aminov <dzhurabek.aminov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
